--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1456078372403');
+@import url('main-blessed1.css?z=1456748169946');
 
 
 /* line 188, ../../../private/common-html/sass/partials/_tables.scss */
@@ -5003,45 +5003,54 @@ td.comment-text {
   margin-bottom: 12px;
   overflow: hidden;
 }
-/* line 183, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 184, ../../../private/common-html/sass/views/_attachment.scss */
+.attachment-label #attachment-latest-version-info {
+  margin-bottom: 24px;
+}
+/* line 188, ../../../private/common-html/sass/views/_attachment.scss */
 .attachment-label .attachment-label-header {
   font-size: 0.85em;
   font-weight: 700;
   letter-spacing: 0.125em;
 }
-/* line 189, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 194, ../../../private/common-html/sass/views/_attachment.scss */
 .attachment-label .attachment-label-header-item {
   margin-right: 24px;
+  font-weight: bold;
 }
-/* line 193, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 199, ../../../private/common-html/sass/views/_attachment.scss */
+.attachment-label .attachment-label-info-item {
+  margin-right: 24px;
+}
+/* line 203, ../../../private/common-html/sass/views/_attachment.scss */
 .attachment-label input {
   display: block;
   margin: 0;
   width: 100%;
   height: 26px;
 }
-/* line 200, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 210, ../../../private/common-html/sass/views/_attachment.scss */
 .attachment-label input[type="checkbox"] {
   display: inline-block;
   width: 3.75em;
 }
-/* line 205, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 215, ../../../private/common-html/sass/views/_attachment.scss */
 .attachment-label select {
   display: block;
   width: 100%;
 }
-/* line 210, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 220, ../../../private/common-html/sass/views/_attachment.scss */
 .attachment-label .attachment-info-field {
   margin-bottom: 6px;
   position: relative;
 }
 
-/* line 216, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 226, ../../../private/common-html/sass/views/_attachment.scss */
 .signatures {
   margin-top: 12px;
 }
 
-/* line 220, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 230, ../../../private/common-html/sass/views/_attachment.scss */
 .signature-table {
   display: table;
   width: auto;
@@ -5049,7 +5058,7 @@ td.comment-text {
   margin-left: 6px;
 }
 
-/* line 227, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 237, ../../../private/common-html/sass/views/_attachment.scss */
 .signature-row {
   display: table-row;
   width: auto;
@@ -5058,58 +5067,58 @@ td.comment-text {
   line-height: 27px;
 }
 
-/* line 235, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 245, ../../../private/common-html/sass/views/_attachment.scss */
 .signature-cell {
   display: table-cell;
   width: 200px;
 }
 
-/* line 240, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 250, ../../../private/common-html/sass/views/_attachment.scss */
 .tos-metadata-content {
   margin-top: 12px;
 }
-/* line 243, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 253, ../../../private/common-html/sass/views/_attachment.scss */
 .tos-metadata-content .subtable {
   margin: 0;
 }
-/* line 245, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 255, ../../../private/common-html/sass/views/_attachment.scss */
 .tos-metadata-content .subtable tr {
   background: transparent;
   border: none;
 }
-/* line 249, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 259, ../../../private/common-html/sass/views/_attachment.scss */
 .tos-metadata-content .subtable th, .tos-metadata-content .subtable td {
   background: transparent;
   padding: 0;
 }
 
-/* line 256, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 266, ../../../private/common-html/sass/views/_attachment.scss */
 .upload-instructions {
   margin-bottom: 24px;
 }
-/* line 257, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 267, ../../../private/common-html/sass/views/_attachment.scss */
 .upload-instructions p {
   line-height: normal;
   margin-bottom: 12px;
 }
 
-/* line 264, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 274, ../../../private/common-html/sass/views/_attachment.scss */
 .archive-valid {
   margin-top: 12px;
 }
-/* line 266, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 276, ../../../private/common-html/sass/views/_attachment.scss */
 .archive-valid [class^="lupicon-"] {
   vertical-align: middle;
   margin-left: 2px;
   font-size: 18px;
 }
 
-/* line 273, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 283, ../../../private/common-html/sass/views/_attachment.scss */
 .modal-body p {
   max-width: 600px;
 }
 
-/* line 277, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 287, ../../../private/common-html/sass/views/_attachment.scss */
 .drop-zone {
   display: table-cell;
   vertical-align: middle;
@@ -5119,17 +5128,17 @@ td.comment-text {
   text-align: center;
   background-color: #2ca92c;
 }
-/* line 285, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 295, ../../../private/common-html/sass/views/_attachment.scss */
 .drop-zone h1 {
   float: none;
   display: block;
   color: #fff;
 }
-/* line 290, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 300, ../../../private/common-html/sass/views/_attachment.scss */
 .drop-zone.active {
   background-color: #46b02d;
 }
-/* line 293, ../../../private/common-html/sass/views/_attachment.scss */
+/* line 303, ../../../private/common-html/sass/views/_attachment.scss */
 .drop-zone i {
   font-size: 50px;
 }
