--- a/resources/private/common-html/sass/partials/__guests.scss
+++ b/resources/private/common-html/sass/partials/__guests.scss
@@ -14,3 +14,14 @@
 .application-guests {
   margin-bottom: 20px;
 }
+
+// Support for using spin next to form-input;
+.spin-container {
+  display: inline-block;
+  margin-top: 4px;
+  width: initial;
+  vertical-align: top;
+  i.spin {
+    display: table-cell;
+  }
+}
