Support for explicit state change.
Authority can change the application state.

Also minor tweaks.

--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -413,6 +413,7 @@ $app-gray-darkest: $gray187;
 }
 
 .application-summary-table {
+  margin-top: $marginS;
   display: table;
   border-collapse: collapse;
   width: 100%;
