--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1371,3 +1371,58 @@ $max-columns: 12;
   }
 }
 
+// Dropdown menus.
+select.dropdown {
+  color: $gray51;
+  border: 1px solid $gray187;
+  border-radius: 0 0 0 0;
+  padding: {
+    left: 12px;
+    right: 12px;
+
+  }
+  height: 40px;
+  background: {
+    image: url( "/lp-static/img/lupicon-chevron-down-orange-dark.png");
+    // The position is is covered by the system down arrow in IE9.
+    // This is relatively graceful degradation, since the system
+    // arrows cannot be removed in IE9.
+    position: right 17px center;
+    repeat: no-repeat;
+    color: white;
+  }
+
+  -webkit-appearance: none;
+  -webkit-user-select: none;
+  -moz-appearance: none;
+
+  appearance: none;
+  overflow: hidden;
+  &:disabled {
+    border-color: $input-disabled-border-color;
+    background: {
+    color: $gray246;
+  }
+  }
+  &:focus {
+    border-color: $input-focus-border-color;
+  }
+}
+
+// Remove system arrow on IE10 and later.
+select.dropdown::-ms-expand {
+  display: none;
+}
+
+select.dropdown.mandatory {
+  border-color: $input-required-border-color;
+}
+
+select.dropdown--full-width {
+  min-width: 100%;
+}
+
+
+.no-wrap-whitespace {
+  white-space: nowrap;
+}
