--- a/resources/private/common-html/sass/partials/_theme.scss
+++ b/resources/private/common-html/sass/partials/_theme.scss
@@ -128,6 +128,8 @@ $input-focus-border-color: $orange-light;
 $input-required-border-color: $orange-dark;
 $input-select-disabled-icon: $gray187;
 
+$label-required-star-color: $red-dark;
+
 $gray-link:   $gray85;
 $gray-hover:  $gray119;
 $gray-active: $gray153;
