--- a/resources/private/common-html/sass/partials/_buttons.scss
+++ b/resources/private/common-html/sass/partials/_buttons.scss
@@ -80,7 +80,7 @@ $icon-pad: 10px;
     // Inline-block would be more intuitive and proper
     // alternative, but for some reason it results in
     // one or two pixel vertical gap. This might be somehow
-    // system-related since the the main.css works fine
+    // system-related since the main.css works fine
     // with inline-block on its own.
     display: table-cell;
     margin: 0;
