Validation and date handling for appeal UI.

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1311,6 +1311,29 @@ $max-columns: 12;
   }
 }
 
+// Support for form-warning component.
+// The component's use cases and visuals
+// are similar to error-message, but it
+// is laid out differently and encompasses
+// the input as well.
+.form-warning__message {
+  background-color: $negative;
+  color: white;
+  display: none;
+  width: 100%;
+}
+
+.form-warning--active {
+  input, select {
+    border: 1px solid $negative !important;
+    color: $negative !important;
+    margin-bottom: 0 !important;
+  }
+  .form-warning__message {
+    display: inline-block;
+  }
+}
+
 @for $i from 1 through $max-columns {
   .form-grid.form-grid--columns-#{$i} > .row {
     @for $j from 1 through $i {
