--- a/resources/private/common-html/sass/partials/_buttons.scss
+++ b/resources/private/common-html/sass/partials/_buttons.scss
@@ -58,7 +58,7 @@ $icon-pad: 10px;
   line-height: $height;
 }
 
-[type=submit], .btn, button {
+.btn-base {
   @include btn-height;
   border: none;
   box-sizing: border-box;
@@ -68,7 +68,6 @@ $icon-pad: 10px;
   white-space: nowrap;
   text-align: left;
   text-decoration: none;
-  cursor: pointer;
   padding: {
     left: $btn-spacer;
     top: 0;
@@ -97,6 +96,11 @@ $icon-pad: 10px;
   }
 }
 
+[type=submit], .btn, button {
+  @extend .btn-base;
+  cursor: pointer;
+}
+
 i.btn {
   margin: 0;
   font-size: $lupicon-size;
@@ -112,7 +116,7 @@ i.btn {
 // This is useful when displaying text with icons,
 // for example.
 .like-btn {
-  @extend .btn;
+  @extend .btn-base;
   cursor: default;
   padding: 0;
   @include small;
@@ -439,7 +443,7 @@ i.toggle {
 
 @mixin stacked {
   display: table;
-  .btn, button {
+  .btn-base, .btn, button {
     width: 100%;
     display: block;
     margin: 0;
@@ -461,7 +465,7 @@ i.toggle {
 
 // Only inner margins
 .inner-margins {
-  .btn, button, div, a {
+  .btn-base, .btn, button, div, a {
     margin-left: $btn-spacer;
   }
   :first-child {
@@ -470,7 +474,7 @@ i.toggle {
 }
 
 .inner-margins.stacked {
-  .btn, button, div, a {
+  .btn-base, .btn, button, div, a {
     margin-left: 0;
     margin-top: $btn-spacer;
   }
