Layered UI componentization approach.

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1311,28 +1311,35 @@ $max-columns: 12;
   }
 }
 
-// Support for form-warning component.
+// Support for form-cell component wrapper.
 // The component's use cases and visuals
 // are similar to error-message, but it
 // is laid out differently and encompasses
 // the input as well.
-.form-warning__message {
+.form-cell__message {
   background-color: $negative;
   color: white;
   display: none;
   width: 100%;
 }
 
-.form-warning--active {
+.form-cell--warning {
   input, select {
     border: 1px solid $negative !important;
     color: $negative !important;
     margin-bottom: 0 !important;
   }
-  .form-warning__message {
+  .form-cell__message {
     display: inline-block;
   }
 }
+.form-cell--required {
+  input, select {
+    border: 1px solid $orange-dark !important;
+    margin-bottom: 0 !important;
+  }
+}
+
 
 @for $i from 1 through $max-columns {
   .form-grid.form-grid--columns-#{$i} > .row {
