--- a/resources/private/common-html/sass/views/_verdict.scss
+++ b/resources/private/common-html/sass/views/_verdict.scss
@@ -27,3 +27,45 @@
     float: right;
   }
 }
+
+// File upload component
+
+ul.upload-files {
+  display: table;
+  list-style: none;
+  padding: {
+    bottom: .5em;
+    left: 0;
+  }
+  li {
+    display: table-row;
+    span, a {
+      display: table-cell;
+    }
+    span {
+      padding-right: 2em;
+    }
+    span.upload-files__size {
+      text-align: right;
+    }
+  }
+}
+
+ul.appeals-files {
+  list-style: none;
+  padding-left: 0;
+  .appeals-files__info {
+    padding-left: 1em;
+    font-style: italic;
+  }
+}
+
+.appeals-table {
+  @extend .table;
+  td.appeals-table--action {
+    text-align: right;
+    a {
+      padding-right: 2em;
+    }
+  }
+}
