--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1458475548706');
+@import url('main-blessed1.css?z=1458659805358');
 
 /* line 13, ../../../private/common-html/sass/partials/_links.scss */
 .application_summary .application_summary_info .link-permit-item:hover {
@@ -1539,26 +1539,6 @@ td.comment-text {
   font-size: 50px;
 }
 
-/* line 310, ../../../private/common-html/sass/views/_attachment.scss */
-ul.upload-files {
-  display: table;
-  list-style: none;
-  padding-bottom: .5em;
-  padding-left: 0;
-}
-/* line 317, ../../../private/common-html/sass/views/_attachment.scss */
-ul.upload-files li {
-  display: table-row;
-}
-/* line 319, ../../../private/common-html/sass/views/_attachment.scss */
-ul.upload-files li span, ul.upload-files li a {
-  display: table-cell;
-}
-/* line 322, ../../../private/common-html/sass/views/_attachment.scss */
-ul.upload-files li span {
-  padding-right: 2em;
-}
-
 /* line 3, ../../../private/common-html/sass/views/_statement.scss */
 #statement .statement-top {
   background-color: #eee;
@@ -2256,6 +2236,50 @@ table.admin-settings td.value .save-indicator {
 /* line 26, ../../../private/common-html/sass/views/_verdict.scss */
 .verdict-signature-fields .value {
   float: right;
+}
+
+/* line 33, ../../../private/common-html/sass/views/_verdict.scss */
+ul.upload-files {
+  display: table;
+  list-style: none;
+  padding-bottom: .5em;
+  padding-left: 0;
+}
+/* line 40, ../../../private/common-html/sass/views/_verdict.scss */
+ul.upload-files li {
+  display: table-row;
+}
+/* line 42, ../../../private/common-html/sass/views/_verdict.scss */
+ul.upload-files li span, ul.upload-files li a {
+  display: table-cell;
+}
+/* line 45, ../../../private/common-html/sass/views/_verdict.scss */
+ul.upload-files li span {
+  padding-right: 2em;
+}
+/* line 48, ../../../private/common-html/sass/views/_verdict.scss */
+ul.upload-files li span.upload-files__size {
+  text-align: right;
+}
+
+/* line 54, ../../../private/common-html/sass/views/_verdict.scss */
+ul.appeals-files {
+  list-style: none;
+  padding-left: 0;
+}
+/* line 57, ../../../private/common-html/sass/views/_verdict.scss */
+ul.appeals-files .appeals-files__info {
+  padding-left: 1em;
+  font-style: italic;
+}
+
+/* line 65, ../../../private/common-html/sass/views/_verdict.scss */
+.appeals-table td.appeals-table--action {
+  text-align: right;
+}
+/* line 67, ../../../private/common-html/sass/views/_verdict.scss */
+.appeals-table td.appeals-table--action a {
+  padding-right: 2em;
 }
 
 /* line 1, ../../../private/common-html/sass/views/_side_panel.scss */
@@ -3127,7 +3151,7 @@ div.olControlZoom a:hover, .olControlLupapisteEditingToolbar div:hover {
 
 /* basic styles*/
 /* line 210, ../../../private/common-html/sass/main.scss */
-.table {
+.table, .appeals-table {
   font-size: 16px;
   line-height: 24px;
 }
