Appeal deletion support.
Appeal type selection is frozen after initial selection.
Authorization checks (applicant vs. authority).
Minor backend fixes.

--- a/resources/private/common-html/sass/partials/_forms.scss
+++ b/resources/private/common-html/sass/partials/_forms.scss
@@ -1457,3 +1457,7 @@ select.dropdown--full-width {
 .no-wrap-whitespace {
   white-space: nowrap;
 }
+
+.cell-span {
+  line-height: $btn-height;
+}
