--- a/resources/private/common-html/sass/views/_verdict.scss
+++ b/resources/private/common-html/sass/views/_verdict.scss
@@ -28,6 +28,20 @@
   }
 }
 
+.verdict-content {
+  padding: {
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+}
+  h2 {
+    margin: {
+    top: 5px;
+    bottom: 10px;
+  }
+  }
+}
+
 // File upload component
 
 ul.upload-files {
