Added some empty space for tasks table and buttons

--- a/resources/private/common-html/sass/partials/_tables.scss
+++ b/resources/private/common-html/sass/partials/_tables.scss
@@ -103,6 +103,11 @@ table.tasks thead tr:first-child td {
   padding-left: 0
 }
 
+.tasks-content {
+  margin-top: $marginM;
+  margin-bottom: $marginM;
+}
+
 table.tasks {
   .task-state {
     width: 22px;
