--- a/resources/private/common-html/sass/views/_application.scss
+++ b/resources/private/common-html/sass/views/_application.scss
@@ -480,7 +480,8 @@ $app-gray-darkest: $gray187;
     margin-left: $marginM;
   }
   table {
-    margin-bottom: $marginS;
+    margin-top: $marginM;
+    margin-bottom: $marginM;
   }
 }
 
