Display tos-function-changes in case-file, tweak layout

--- a/resources/private/common-html/sass/main.scss
+++ b/resources/private/common-html/sass/main.scss
@@ -118,6 +118,7 @@
 @import "partials/_bulletins";
 @import "partials/_bulletin-comments";
 @import "partials/_guests";
+@import "partials/_case-file";
 
 /* VIEWS
 ------------------------------------------------------------------------------*/
