--- a/resources/public/lp-static/css/main-blessed1.css
+++ b/resources/public/lp-static/css/main-blessed1.css
@@ -6900,9 +6900,9 @@ div.alleYli-radioGroup {
 }
 /* line 1347, ../../../private/common-html/sass/partials/_forms.scss */
 .form-grid.form-grid--columns-11 > .row .col-11 {
-  width: 100%;
-  min-width: 100%;
-  max-width: 100%;
+  width: 100.0%;
+  min-width: 100.0%;
+  max-width: 100.0%;
 }
 
 /* line 1347, ../../../private/common-html/sass/partials/_forms.scss */
@@ -11219,6 +11219,11 @@ div.search i {
   display: table-cell;
 }
 
+/* line 2, ../../../private/common-html/sass/partials/_case-file.scss */
+.case-file-table .event-title {
+  font-weight: bold;
+}
+
 /* VIEWS
 ------------------------------------------------------------------------------*/
 @media (max-width: 47.5em) {
@@ -11643,9 +11648,4 @@ span.icon_clear:before {
 /* line 137, ../../../private/common-html/sass/views/_application.scss */
 .application_summary .application_summary_info .link-permit {
   display: block;
-}
-/* line 141, ../../../private/common-html/sass/views/_application.scss */
-.application_summary .application_summary_info .link-permit-item {
-  color: #f39129;
-  text-decoration: none;
 }
